--- a/conf/config.example.json
+++ b/conf/config.example.json
@@ -1,4 +1,4 @@
 {
     "botToken": "<your telegram bot API token>",
-    "botName": "<your pixabay API token>",
+    "botName": "<your telegram bot name>",
 }
